--- a/array.html
+++ b/array.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Моя личная страница с портфолио. Проект по вебу">
     <meta name="keywords" content="html, development, Java, portfolio, lab">
     <link rel="stylesheet" href="css/outline.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
