--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Моя личная страница с портфолио. Проект по вебу">
     <meta name="keywords" content="html, development, Java, portfolio, lab">
     <link rel="stylesheet" href="css/outline.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -102,7 +102,13 @@
             </div>
         </div>
         <aside>
-            <div class="asideText">
+            <div class="asideBar">
+				<h4>Ну что? Не узнали?</h4>
+				<a href="https://github.com/stekkko" target="_blank">
+					<div class="avatar">
+						<img src="imgs/avatar.jpg" width="200" border="1">
+					</div>
+				</a>
                 <h4>Важные дела</h4>
                 <dl>
                     <li><b>Сдать долг по вебу<i>(!)</i></b></li>
