--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Моя личная страница с портфолио. Проект по вебу">
     <meta name="keywords" content="html, development, Java, portfolio, lab">
     <link rel="stylesheet" href="css/outline.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,27 +26,27 @@
     <main>
         <a href="imgs/1.jpg" target="_blank">
             <div class="gall">
-                <img src="imgs/1.jpg" width="100%" tabindex="0" border="1"/>
+                <img src="imgs/1.jpg" width="100%" tabindex="1" border="1"/>
             </div>
         </a>
         <a href="imgs/2.jpg" target="_blank">
             <div class="gall">
-                <img src="imgs/2.jpg" width="100%" tabindex="0" border="1"/>
+                <img src="imgs/2.jpg" width="100%" tabindex="2" border="1"/>
             </div>
         </a>
         <a href="imgs/3.jpg" target="_blank">
             <div class="gall">
-                <img src="imgs/3.jpg" width="100%" tabindex="0" border="1"/>
+                <img src="imgs/3.jpg" width="100%" tabindex="3" border="1"/>
             </div>
         </a>
         <a href="imgs/4.jpg" target="_blank">
             <div class="gall">
-                <img src="imgs/4.jpg" width="100%" tabindex="0" border="1"/>
+                <img src="imgs/4.jpg" width="100%" tabindex="4" border="1"/>
             </div>
         </a>
         <a href="imgs/5.jpg" target="_blank">
             <div class="gall">
-                <img src="imgs/5.jpg" width="100%" tabindex="0" border="1"/>
+                <img src="imgs/5.jpg" width="100%" tabindex="5" border="1"/>
             </div>
         </a>
 
