--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h4>Важные дела</h4>
                 <dl>
                     <li><b>Сдать долг по вебу<i>(!)</i></b></li>
-                    <li>Сварить пельмешки</li>
+		    <li><s>Сварить пельмешки</s></li>
                     <li>Пора подкачаться</li>
                     <li>Сдать лабы по мл</li>
                 </dl>
