--- a/gallery.html
+++ b/gallery.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <script src="js/script.js">
-    </script>
+    <script src="js/lab5.js"></script>
+	<script src="js/lab7.js"></script>
     <header>
         <h1>Личная страница</h1>
         <h2>Смирнов Даниил</h2>
