--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		
         <aside>
             <div class="asideBar">
-				<h4>Ну что? Не узнали?</h4>
+				<h4>Моё фото</h4>
 				<a href="https://github.com/stekkko" target="_blank">
 					<div class="avatar">
 						<img src="imgs/avatar.jpg" width="200" border="1">
@@ -125,10 +125,10 @@
 				</a>
                 <h4>Важные дела</h4>
                 <dl>
-                    <li><b>Сдать долг по вебу<i>(!)</i></b></li>
-                    <li>Сварить пельмешки</li>
+                    <li><b>Изучить новую статью<i>(!)</i></b></li>
+			<li><s>Сварить пельмени</s></li>
                     <li>Пора подкачаться</li>
-                    <li>Сдать лабы по мл</li>
+                    <li>Сдать лабораторные работы</li>
                 </dl>
             </div>
         </aside>
